# pacman

./: .gitignore  CMakeLists.txt  LICENSE  README.md  module.json
pacman/: Makefile
pacman/source/: main.cpp
